# real-world-haskell

./: .gitignore
ch01/: WC.hs  WC.hs~  quux.txt
ch02/: RoundToEven.hs  add.hs  lastButOne.hs  lastButOne.hs~  myDrop.hs  myDrop.hs~
ch03/: AlgebraicVector.hs  BookStore.hs  BookStore.hs~  Exercises.hs  Exercises.hs~  Lending.hs  Lending.hs~  LocalFunction.hs  MySecond.hs  MySecond.hs~  Nullable.hs  Nullable.hs~  Tree.hs  add.hs  not.hs
ch04/: Adler32.hs  Exercises.hs  Filter.hs  FirstWords.hi  FirstWords.hs  FixLines.hi  FixLines.hs  Fold.hs  IntParse.hs  InteractWith.hi  InteractWith.hs  JumbleLines.hs  Map.hs  Plus.hs  SplitLines.hs  SuffixTree.hs  Sum.hs  hello-out.txt
ch05/: Main.hs  Prettify.hs  PrettifyStub.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  mypretty.cabal  simple
ch06/: BrokenClass.hs  JsonClass.hs  NewType.hs  NewtypeDiff.hs  Overlap.hs  SimpleClass.hs  SimpleJSON.hs  Test  colorderived.hs  eqclasses.hs  naiveeq.hs  read  read.hs
ch07/: actions.hs  argstest.hs  basicio-nodo.hs  basicio.hs  callingpure.hs  envvartest.hs  filter.hs  input.txt  output.txt  return1.hs  tempfile.hs  toupper-imp.hs  toupper-lazy1.hs  toupper-lazy2.hs  toupper-lazy3.hs  toupper-lazy4.hs  toupper-lazy6.hs
ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  SumFile.hs  exercises.hs
ch09/: BetterPredicate.hs  ControlledVisit.hs  Exercises.lhs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs
ch10/: PNM.hs  Parse.hs  TreeMap.hs
ch11/: Prettify.hs  Prettify.hs.html  Prettify2.hs  QC-basics.hs  hpc_index_exp.html  main  main.hs
ch12/: Arrays.hs  Lists.hs  (+6 more)
(+3 files in other folders)
